--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
+* {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+
+
+form{
+  padding:10px;
+  & > * {
+  display:  block;
+  margin: 5px 0;
+  }
+}
 
